tests/baselines/reference/emptyTypeArgumentList.errors.txt
tests/cases/compiler/emptyTypeArgumentList.ts(2,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/emptyTypeArgumentList.ts(2,4): error TS1099: Type argument list cannot be empty.


==== tests/cases/compiler/emptyTypeArgumentList.ts (2 errors) ====
    function foo<T>() { }
    foo<>();
    ~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
       ~~
!!! error TS1099: Type argument list cannot be empty.